fixed fotn size for countdown on mobile

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -172,6 +172,6 @@ body {
     position: absolute;
     top: 33px;
     left: 7.5em;
-    font-size: 0.8rem;
+    font-size: 0.6rem;
   }
 }
